# financialManager

./: AbstractDataStorage.h  AbstractStockFund.cpp  AbstractStockFund.h  Account.cpp  Account.h  Bond.cpp  Bond.h  CMakeLists.txt  CompaniesList.h  Company.cpp  Company.h  Conto.cpp  Conto.h  Controller.cpp  Controller.h  DialogNoButton.cpp  DialogNoButton.h  EntitiesList.h  Entity.h  ErrorLog.h  Fund.cpp  Fund.h  FundSociety.cpp  FundSociety.h  Historical.cpp  Historical.h  Investment.h  InvestmentForm.cpp  InvestmentForm.h  InvestmentManager.cpp  InvestmentManager.h  Loader.cpp  Loader.h  Model.cpp  Model.h  Observer.h  ResearchOptions.h  Stock.cpp  Stock.h  Subject.h  (+20 more)
test/: AccountTests.cpp  BondTests.cpp  CMakeLists.txt  ContoTest.cpp  HistoricalTests.cpp  InvestmentManagerTests.cpp  LoaderTests.cpp  ModelTests.cpp  TransactionTests.cpp  ViewTests.cpp  runAllTests.cpp
test/lib/googletest/docs/: FAQ.md  Primer.md
test/lib/googletest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
test/lib/googletest/xcode/gtest.xcodeproj/: project.pbxproj
